Added models of product variants and product attributes for better work with products. Changed the structure of storing model files.

--- a/E-commerceOnlineStore/E-commerceOnlineStore.csproj
+++ b/E-commerceOnlineStore/E-commerceOnlineStore.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <Folder Include="DTOs\" />
+    <Folder Include="Models\DataModels\Inventory\" />
+    <Folder Include="Models\DataModels\Logs\" />
   </ItemGroup>
 
 </Project>
