The wishlist functionality has been redesigned for favorites. Initial documentation for the project has been added. The structure of existing models has been slightly changed. Models for analytics, price history tracking, support requests, and newsletter subscriptions have been added. Necessary enumerations have been added. Other related changes have been made to the code.

--- a/E-commerceOnlineStore/E-commerceOnlineStore.csproj
+++ b/E-commerceOnlineStore/E-commerceOnlineStore.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="DTOs\" />
+    <Folder Include="Models\DataModels\Common\" />
     <Folder Include="Models\DataModels\Inventory\" />
   </ItemGroup>
 
