--- a/E-commerceOnlineStore/E-commerceOnlineStore.csproj
+++ b/E-commerceOnlineStore/E-commerceOnlineStore.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.22.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
@@ -23,7 +24,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <Folder Include="Controllers\Support\" />
+    <Folder Include="Controllers\Payments\" />
+    <Folder Include="Controllers\Products\" />
+    <Folder Include="Controllers\Orders\" />
   </ItemGroup>
 
 </Project>
